--- a/index.html
+++ b/index.html
@@ -310,7 +310,10 @@
     <!-- Contact -->
     <div class="contact">
       <p><strong>Pour tout contact collaboratif relatif à la théorie :</strong></p>
-      <p> ZM — <a href="mailto:zmtheotie@gmail.com">zmtheorie@gmail.com</a></p>
+      <p> ZM — <a href="mailto:zmtheorie@gmail.com" aria-label="Envoyer un e-mail à Théorie ZM">
+  📧 Contact  zmtheorie@gmail.com
+</a>
+
       <p>HAL ID : <a href="https://hal.science/hal-05186131v1" target="_blank" rel="noopener">hal-05186131v1</a></p>
     </div>
   </div>
