--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       </div>
       <div style="margin: .8rem 0 0;">
         <a href="/pdf-explicatif-zm.pdf" class="btn" target="_blank" rel="noopener">📄 PDF Explicatif Gratuit</a>
-        <a href="mailto:mzerrouk95@gmail.com" class="btn">🤝 Contact Collaboratif</a>
+        <a href="zmtheorie@gmail.com" class="btn">🤝 Contact Collaboratif</a>
       </div>
       <p style="font-style:italic; color:#B0C4DE; margin: 1.2rem 0 0;">
         "Ce que nous appelons réalité n'est peut-être qu'un rêve stable dans la conscience d'un champ mathématique." MZ.
