--- a/index.html
+++ b/index.html
@@ -291,12 +291,13 @@
 
     <!-- 8. Appel final + Boutons en bas -->
     <section class="section" style="text-align:center;">
-      <h2 class="section-title">🚀 Rejoignez la Révolution Intellectuelle du Siècle</h2>
-      <p style="max-width:740px; margin:.4rem auto 1.2rem;">
-        Soyez pionniers de cette compréhension nouvelle. Les esprits qui la maîtrisent façonneront le XXIe siècle.
+      <h2 class="section-title">🚀 Rejoignez la Révolution Intellectuelle du Siècle<
+      </p> et soyez pionniers dans la compréhension de ce nouveau paradigme.</h2>
+      <p style="max-width:640px; margin:.4rem auto 1.2rem;">
+      
       </p>
       <div style="margin: 1.2rem 0 0;">
-        <a href="LIVRE_COMPLET_URL.pdf" class="btn btn-primary" rel="nofollow noopener">📖 COMMANDER LE LIVRE COMPLET</a>
+        <a href="LIVRE_COMPLET_URL.pdf" class="btn target=" _blank" rel="noopener">📖 COMMANDER LE LIVRE COMPLET</a>
       </div>
       <div style="margin: .8rem 0 0;">
         <a href="/pdf-explicatif-zm.pdf" class="btn" target="_blank" rel="noopener">📄 PDF Explicatif Gratuit</a>
