--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
     <section class="section">
       <h2 class="section-title"> Ce que les Génies Pressentaient</h2>
       <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap: 12px;">
-        <blockquote>« Je veux connaître les pensées de Dieu ; le reste ne sont que des détails. »  <span class="author">Einstein</span></blockquote>
-        <blockquote>« L’esprit de l’homme ne fait qu’un avec l’univers. »  <span class="author">Erwin Schrödinger</span></blockquote>
-        <blockquote>« L’univers n’est fait que de relations. »  <span class="author">Carlo Rovelli</span></blockquote>
+        <blockquote>« Je veux connaître les pensées de Dieu ; le reste ne sont que des détails. »  <span class="author"> Einstein</span></blockquote>
+        <blockquote>« L’esprit de l’homme ne fait qu’un avec l’univers. »  <span class="author"> Erwin Schrödinger</span></blockquote>
+        <blockquote>« L’univers n’est fait que de relations. »  <span class="author"> Carlo Rovelli</span></blockquote>
       </div>
       <p style="text-align:center; color:#FFD700; font-weight:750; margin-top:.8rem;">
         La Théorie ZM formalise ces intuitions profondes.
@@ -292,8 +292,8 @@
     <!-- 8. Appel final + Boutons en bas -->
     <section class="section" style="text-align:center;">
       <h2 class="section-title"> Rejoignez la Révolution Intellectuelle du Siècle</h2>
-      </p> Soyez pionniers dans la compréhension de ce nouveau paradigme.<
-      </p>Pour les esprits curieux et exigents<
+      </p> Soyez pionniers dans la compréhension de ce nouveau paradigme.
+      </p>Pour les esprits curieux et exigents
       <p style="max-width:640px; margin:.4rem auto 1.2rem;">
       
       </p>
@@ -305,7 +305,7 @@
         <a href="zmtheorie@gmail.com" class="btn"> Contact Collaboratif</a>
       </div>
       <p style="font-style:italic; color:#B0C4DE; margin: 1.2rem 0 0;">
-        "Tout porte à croire que ce que nous appelons réalité, n'est sans doute que le fruit d'un rêve stable dans un champ d'information pur, intemporel, et probablement supraconscient." MZ.
+        "Tout porte à croire que ce que nous appelons réalité, n'est que le fruit d'un rêve stable dans un champ d'information pur, intemporel, et probablement supraconscient." MZ.
       </p>
     </section>
 
