--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="tagline">La Révolution Informationnelle qui Change Tout</div>
     <div class="hook">L’Univers n’est pas ce que vous croyez…</div>
     <p style="text-align:center; max-width:800px; margin:0 auto 1.2rem;">
-      Découvrez la théorie révolutionnaire qui résout enfin des énigmes que Einstein, Planck et Heisenberg n’ont pu percer. 
+      Découvrez la théorie révolutionnaire qui apporte une réponse aux plus grandes énigmes du siècle ! 
       Une vision qui transforme radicalement notre compréhension du réel.
     </p>
 
