--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Titre + description (avec "ZM Théorie") -->
   <title>Théorie ZM — ZM Théorie, une nouvelle vision de l’Univers fondée sur l’information</title>
   <meta name="description" content="ZM Théorie, ou Théorie ZM, propose une cosmologie informationnelle unifiée : l’univers comme réseau d’information, lois émergentes, géométrie et conscience mesurable. PDF explicatif disponible." />
-  <meta name="keywords" content="Théorie ZM, ZM Théorie, physique de l'information, cosmologie computationnelle, conscience, supraconscience, pixels d'information, hyperspace, gravité quantique, science unifiée" />
+  <meta name="keywords" content="Théorie ZM, ZM Théorie, Univers fractal, physique de l'information, cosmologie computationnelle, conscience, supraconscience, pixels d'information, hyperspace, gravité quantique, science unifiée" />
 
   <!-- Open Graph -->
   <meta property="og:locale" content="fr_FR" />
