--- a/index.html
+++ b/index.html
@@ -513,8 +513,7 @@
         <a href="/pdf-explicatif.pdf" class="btn" target="_blank" rel="noopener">📄 PDF explicatif gratuit</a>
         <a href="mailto:zmtheorie@gmail.com" class="btn">Contact collaboratif</a>
       </div>
-      <p style="font-style:italic; color:#B0C4DE; margin:1.2rem 0 0;">
-        « Tout porte à croire que ce que nous appelons réalité est le rêve stable d'un champ d'information pur et probablement supraconscient. »
+      <p style="font-style:italic; color:#B0C4DE; margin:1.2rem 0 0;"
       </p>
     </section>
 
