--- a/index.html
+++ b/index.html
@@ -521,4 +521,4 @@
     <div class="contact">
       <p><strong>Pour tout contact collaboratif relatif à la théorie :</strong></p>
       <p>ZM — <a href="mailto:zmtheorie@gmail.com" aria-label="Envoyer un e-mail à Théorie ZM">📧 zmtheorie@gmail.com</a></p>
-      <p>HAL ID :
+      <p>HAL ID :hal-05186131</p>
