--- a/index.html
+++ b/index.html
@@ -507,12 +507,19 @@
       <p>Pour les esprits curieux et exigeants, découvrez la synthèse détaillée et les pistes expérimentales.</p>
       <div style="margin: 1.2rem 0 0;">
         <!-- Remplace LIVRE_COMPLET_URL.pdf par l'URL finale -->
-        <a href="LIVRE_COMPLET_URL.pdf" class="btn btn-primary" target="_blank" rel="noopener">📖 Commander le livre complet</a>
+          <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;">
+        <a href="https://www.amazon.fr/dp/B0FSF358XS" target="_blank" rel="noopener"
+           style="background:#0f766e;color:#fff;text-decoration:none;padding:12px 16px;
+                  border-radius:10px;font-weight:700;">🛒 Acheter l’eBook Kindle</a>
+
+        <!-- remplace l'ASIN_BROCHE une fois le broché en ligne -->
+        <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
+           style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;
+                  border-radius:10px;font-weight:700;">📘 Acheter le livre broché</a>
       </div>
-      <div style="margin:.8rem 0 0;">
-        <a href="/pdf-explicatif.pdf" class="btn" target="_blank" rel="noopener">📄 PDF explicatif gratuit</a>
-        <a href="mailto:zmtheorie@gmail.com" class="btn">Contact collaboratif</a>
-      </div>
+
+      <p style="margin-top:12px;color:#6b7280;font-size:14px;">© 2025 Alexandre ZM — Independently published</p>
+    </div>
       <p style="font-style:italic; color:#B0C4DE; margin:1.2rem 0 0;"
       </p>
     </section>
