--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
 
     <!-- Appel final -->
     <section class="section" style="text-align:center;">
-      <h2 class="section-title">Envie d'aller plus loin</h2>
-      <p>Pour les esprits curieux et exigeants, découvrez la synthèse détaillée et les pistes expérimentales.</p>
+      <h2 class="section-title">Envie d'aller plus loin ?</h2>
+      <p>Pour les esprits curieux et exigeants, découvrez la Théorie détaillée et les pistes expérimentales.</p>
       <div style="margin: 1.2rem 0 0;">
         <!-- Remplace LIVRE_COMPLET_URL.pdf par l'URL finale -->
           <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;">
@@ -523,50 +523,6 @@
       <p style="font-style:italic; color:#B0C4DE; margin:1.2rem 0 0;"
       </p>
     </section>
-
-
-  <section style="max-width:960px;margin:40px auto;padding:24px;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-  color:#111;line-height:1.55;border:1px solid #e5e7eb;border-radius:16px;">
-  <div style="display:flex;gap:24px;flex-wrap:wrap;align-items:flex-start;">
-    <!-- visuel de couverture -->
-    <figure style="flex:0 0 280px;margin:0">
-      <img src="https://tonsite.exemple/couverture-theorie-zm.jpg"
-           alt="Couverture du livre THÉORIE ZM – Le modèle des pixels d’information"
-           style="width:100%;height:auto;border-radius:12px;box-shadow:0 10px 24px rgba(0,0,0,.15);" />
-    </figure>
-
-    <!-- texte -->
-    <div style="flex:1 1 360px;min-width:320px">
-      <h2 style="font-size:28px;margin:0 0 6px 0;">THÉORIE ZM</h2>
-      <p style="margin:0 0 14px 0;color:#374151;">Le modèle des pixels d’information</p>
-
-      <p>Et si la réalité n’était pas faite d’objets, mais de relations d’information ? La Théorie ZM propose un cadre simple et testable : l’univers comme un graphe de pixels d’information. Par seuils, ces connexions stabilisent l’espace, le temps, les particules et les lois.</p>
-
-      <p>Vous y trouverez une distance d’information, une action pour la cohérence des traductions, et des <strong>signatures vérifiables</strong> : intrication, motifs d’interférence, plateaux d’échelle, <em>Φ ≥ Φᶜ</em> pour l’émergence de la conscience.</p>
-
-      <ul style="margin:10px 0 14px 18px;">
-        <li>Vision claire + rigueur</li>
-        <li>Pistes expérimentales concrètes</li>
-        <li>Récit du micro au macro</li>
-      </ul>
-
-      <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:10px;">
-        <a href="https://www.amazon.fr/dp/B0FSF358XS" target="_blank" rel="noopener"
-           style="background:#0f766e;color:#fff;text-decoration:none;padding:12px 16px;
-                  border-radius:10px;font-weight:700;">🛒 Acheter l’eBook Kindle</a>
-
-        <!-- remplace l'ASIN_BROCHE une fois le broché en ligne -->
-        <a href="https://www.amazon.fr/dp/ASIN_BROCHE" target="_blank" rel="noopener"
-           style="background:#1d4ed8;color:#fff;text-decoration:none;padding:12px 16px;
-                  border-radius:10px;font-weight:700;">📘 Acheter le livre broché</a>
-      </div>
-
-      <p style="margin-top:12px;color:#6b7280;font-size:14px;">© 2025 Alexandre ZM — Independently published</p>
-    </div>
-  </div>
-</section>
-
 
     <!-- Contact -->
     <div class="contact">
